--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <link rel="icon" href="/favicon.ico" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Smoochi - Smooth Ice Cream Mochi | Bandung Indonesia</title>
-    <meta name="description" content="Supplier mochi ice cream terpercaya di Bandung. Nikmati perpaduan sempurna es krim lembut dalam balutan mochi yang kenyal. 20+ varian rasa, cocok untuk reseller, resto, hotel, dan event." />
     <meta name="author" content="Smoochi" />
-    <meta name="keywords" content="mochi, ice cream, mochi ice cream, dessert, Bandung, Indonesia, reseller mochi, supplier mochi, gofood, grabfood, shopeefood" />
-
+    
     <meta property="og:title" content="Smoochi - Smooth Ice Cream Mochi Bandung" />
     <meta property="og:description" content="Supplier mochi ice cream terpercaya di Bandung. 20+ varian rasa, cocok untuk reseller, resto, hotel, dan event." />
     <meta property="og:type" content="website" />
@@ -16,6 +14,15 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@smoochi_id" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-FJT0Q4NEGT"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-FJT0Q4NEGT');
+    </script>
   </head>
 
   <body>
