--- a/index.html
+++ b/index.html
@@ -1,32 +1,47 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <link rel="icon" href="/favicon.ico" />
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="author" content="Smoochi" />
-    
-    <meta property="og:title" content="Smoochi - Smooth Ice Cream Mochi Bandung" />
-    <meta property="og:description" content="Supplier mochi ice cream terpercaya di Bandung. 20+ varian rasa, cocok untuk reseller, resto, hotel, dan event." />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@smoochi_id" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-FJT0Q4NEGT"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
+<head>
+  <link rel="icon" href="/favicon.ico" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="author" content="Smoochi" />
 
-      gtag('config', 'G-FJT0Q4NEGT');
-    </script>
-  </head>
+  <meta property="og:title" content="Smoochi - Smooth Ice Cream Mochi Bandung" />
+  <meta property="og:description"
+    content="Supplier mochi ice cream terpercaya di Bandung. 20+ varian rasa, cocok untuk reseller, resto, hotel, dan event." />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@smoochi_id" />
+  <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-FJT0Q4NEGT"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-FJT0Q4NEGT');
+  </script>
+  <script>
+    // SPA Hack Part 2: Restore path if redirected
+    const redirect = sessionStorage.getItem('redirect');
+    if (redirect) {
+      const { pathname, search, hash } = JSON.parse(redirect);
+      // Only replace state if we are at root
+      if (window.location.pathname === '/' && pathname !== '/') {
+        window.history.replaceState(null, null, pathname + search + hash);
+      }
+      sessionStorage.removeItem('redirect');
+    }
+  </script>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
