--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:site" content="@smoochi_id" />
   <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+  <link rel="canonical" href="https://mochiicecreamsmoochi.com/" />
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-FJT0Q4NEGT"></script>
   <script>
