--- a/index.html
+++ b/index.html
@@ -8,14 +8,12 @@
   <meta name="author" content="Smoochi" />
 
   <meta property="og:title" content="Smoochi - Smooth Ice Cream Mochi Bandung" />
-  <meta property="og:description"
-    content="Supplier mochi ice cream terpercaya di Bandung. 20+ varian rasa, cocok untuk reseller, resto, hotel, dan event." />
+  <meta property="og:description" content="Supplier mochi ice cream terpercaya di Bandung. 20+ varian rasa, cocok untuk reseller, resto, hotel, dan event." />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:site" content="@smoochi_id" />
-  <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+  <meta property="og:site_name" content="Smoochi Mochi Ice Cream Bandung" />
+  <meta property="og:image" content="https://mochiicecreamsmoochi.com/assets/smoochi-logo-BvTY1TYd.jpeg" />
+  <meta property="og:image:alt" content="Smoochi Mochi Ice Cream Bandung" />
+  
   <link rel="canonical" href="https://mochiicecreamsmoochi.com/" />
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-FJT0Q4NEGT"></script>
