Fixbug Keyword can not be read

--- a/index.html
+++ b/index.html
@@ -2,19 +2,23 @@
 <html lang="en">
 
 <head>
-  <link rel="icon" href="/favicon.ico" />
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">
+  <link rel="icon" type="image/png" sizes="48x48" href="/favicon-48x48.png">
+
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="author" content="Smoochi" />
 
   <meta property="og:title" content="Smoochi - Smooth Ice Cream Mochi Bandung" />
-  <meta property="og:description" content="Supplier mochi ice cream terpercaya di Bandung. 20+ varian rasa, cocok untuk reseller, resto, hotel, dan event." />
+  <meta property="og:description"
+    content="Supplier mochi ice cream terpercaya di Bandung. 20+ varian rasa, cocok untuk reseller, resto, hotel, dan event." />
   <meta property="og:type" content="website" />
-  <meta property="og:site_name" content="Smoochi Mochi Ice Cream Bandung" />
-  <meta property="og:image" content="https://mochiicecreamsmoochi.com/assets/smoochi-logo-BvTY1TYd.jpeg" />
-  <meta property="og:image:alt" content="Smoochi Mochi Ice Cream Bandung" />
-  
-  <link rel="canonical" href="https://mochiicecreamsmoochi.com/" />
+  <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+  <meta name="keywords"
+    content="Smoochi Bandung, Smoochi Ice Cream, mochi ice cream bandung, dessert mochi, smoochi mochi, reseller mochi, supplier mochi, gofood mochi, grabfood mochi, shopeefood mochi" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@smoochi_id" />
+  <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-FJT0Q4NEGT"></script>
   <script>
